--- a/resources/application.conf
+++ b/resources/application.conf
@@ -1,9 +1,9 @@
 ktor {
     deployment {
-        port = 8080
+        port = 5000
         port = ${?PORT}
     }
     application {
-        modules = [ com.ilya.shevtsov.casewatcher.ApplicationKt.module ]
+        modules = [ core.ApplicationKt.module ]
     }
 }
