--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,13 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
+#Thu Jul 14 22:32:32 MSK 2022
+sdk.dir=C\:\\Users\\dayzi\\AppData\\Local\\Android\\Sdk
+## This file must *NOT* be checked into Version Control Systems,
+# as it contains information specific to your local configuration.
+#
+# Location of the SDK. This is only used by Gradle.
+# For customization when using a Version Control System, please read the
+# header note.
 #Fri Jan 21 16:13:13 MSK 2022
 sdk.dir=C\:\\Users\\dayzi\\AppData\\Local\\Android\\Sdk
