--- a/resources/application.conf
+++ b/resources/application.conf
@@ -1,7 +1,7 @@
 ktor {
     deployment {
+        host = 127.0.0.1   # or localhost
         port = 5000
-        port = ${?PORT}
     }
     application {
         modules = [ core.ApplicationKt.module ]
